@@ -1,3 +1,7 @@
+2013-06-18  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclEvent.c: Bug [3611974]: InitSubsystems multiple thread issue.
+
 2013-06-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/regc_locale.c: Bug [a876646efe]: re_expr character class
